# Neko-Downloader

./: .gitignore  Cargo.toml  Package.json  README.md  package-lock.json  requirements.txt
download logic/: Tauri.conf.json
extractor/: nhentai_net.py
src-tauri/src/: Main.rs
src-ui/src/css/: style.css
ui/: index.html
